--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.17", features = ["derive"] }
+lazy_static = "1.4.0"
+regex = "1.6.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 rss = "2.0"
+scraper = "0.13.0"
